# prepipy

./: .gitignore  README.md  TODO.md  auxiliaries.py  bands.yml  cmd_ifc.py  combo_large_pil.py  combo_large_pil_many.py  config.yml  config_pers.yml  config_single.yml  configuration.py  framework.py  framework_sources.py  html_templates.yml  masking.py  masking.yml  pyproject.toml  rgbcombo.py  stiff_params.yml  test_combo_large_pil.py
.github/: release.yml
.github/workflows/: bump.yml  publish_pypi.yml
config/: bands.yml  config.yml  config_comments.yml  config_legacy.yml  config_single.yml  logging_config.yml  masking_example.yml
src/prepipy/: auxiliaries.py  framework.py  framework_sources.py  masking.py  rgbcombo.py
src/prepipy/config/: config_comments.yml  logging_config.yml
src/prepipy/config_file_examples/: bands.yml  config_single.yml  mask.yml
src/prepipy/resources/: grey_values.yml
test/: test_combo_large_pil.py
